--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0",
     "typescript": "^4.9.5",
+    "viem": "^1.19.7",
+    "wagmi": "^1.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
